# autoresearch

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py  uv.toml
.codex/: config.toml  hooks.json
.codex/hooks/: autoresearch_session_start.py  autoresearch_state.py  autoresearch_stop.py
docker/: codex-autoresearch.Dockerfile
minute_data/: __init__.py  akshare_sina.py
scripts/: branch_results.py  codex_supervisor_state.py  run_codex_autoresearch.sh  run_codex_autoresearch_docker.sh
